testsuite/bsc.interra/messages/EBadIfcType/EBadIfcType_module.bs.bsc-vcomp-out.expected
checking package dependencies
compiling EBadIfcType_module.bs
Error: "EBadIfcType_module.bs", line 23, column 0: (T0043)
  Bad top level type: not a Module: Prelude.Int 32 -> Prelude.Int 32 ->
  Prelude.Int 32
